k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 710449245738.dkr.ecr.us-east-1.amazonaws.com/devops_case_ecr_backend:latest
          ports:
            - containerPort: 5000
